// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTree should list licenses non-recursively 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`getTree should list licenses non-recursively for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`getTree should list licenses recursively 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
   │  ├─ URL: git://github.com/Raynos/function-bind.git
   │  ├─ VendorName: Raynos
   │  ├─ VendorUrl: https://github.com/Raynos/function-bind
   │  └─ MIT
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`getTree should list licenses recursively for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (node-modules) should list licenses 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (node-modules) should list licenses as json 1`] = `
"{"axios@npm:0.24.0":{"value":{"locator":"axios@npm:0.24.0","descriptor":"axios@npm:^0.24.0"},"children":{"url":"https://github.com/axios/axios.git","vendorName":"Matt Zabriskie","vendorUrl":"https://axios-http.com","liscense":"MIT"}},"caseless@npm:0.12.0":{"value":{"locator":"caseless@npm:0.12.0","descriptor":"caseless@npm:^0.12.0"},"children":{"url":"https://github.com/mikeal/caseless","vendorName":"Mikeal Rogers","liscense":"Apache-2.0"}},"has@npm:1.0.3":{"value":{"locator":"has@npm:1.0.3","descriptor":"has@npm:^1.0.3"},"children":{"url":"git://github.com/tarruda/has.git","vendorName":"Thiago de Arruda","vendorUrl":"https://github.com/tarruda/has","liscense":"MIT"}},"is-ci@npm:1.2.1":{"value":{"locator":"is-ci@npm:1.2.1","descriptor":"is-ci@npm:^1.0.0"},"children":{"url":"https://github.com/watson/is-ci.git","vendorName":"Thomas Watson Steen","vendorUrl":"https://github.com/watson/is-ci","liscense":"MIT"}},"is-ci@npm:2.0.0":{"value":{"locator":"is-ci@npm:2.0.0","descriptor":"is-ci@npm:^2.0.0"},"children":{"url":"https://github.com/watson/is-ci.git","vendorName":"Thomas Watson Steen","vendorUrl":"https://github.com/watson/is-ci","liscense":"MIT"}},"is-function@npm:1.0.2":{"value":{"locator":"is-function@npm:1.0.2","descriptor":"is-function@npm:^1.0.2"},"children":{"url":"git://github.com/grncdr/js-is-function.git","vendorName":"Stephen Sugden","vendorUrl":"https://github.com/grncdr/js-is-function","liscense":"MIT"}},"is-promise@npm:3.0.0":{"value":{"locator":"is-promise@npm:3.0.0","descriptor":"is-promise@npm:^3.0.0"},"children":{"url":"https://github.com/then/is-promise.git","vendorName":"ForbesLindesay","liscense":"MIT"}},"is-promise@npm:4.0.0":{"value":{"locator":"is-promise@npm:4.0.0","descriptor":"is-promise@npm:^4.0.0"},"children":{"url":"https://github.com/then/is-promise.git","vendorName":"ForbesLindesay","liscense":"MIT"}},"package1@workspace:packages/package1":{"value":{"locator":"package1@workspace:packages/package1","descriptor":"package1@workspace:packages/package1"},"children":{"liscense":"UNKNOWN"}},"test-package@workspace:.":{"value":{"locator":"test-package@workspace:.","descriptor":"test-package@workspace:."},"children":{"liscense":"UNKNOWN"}}}
"
`;

exports[`licenses list (node-modules) should list licenses for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (node-modules) should list licenses recursively 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
   │  ├─ URL: git://github.com/Raynos/function-bind.git
   │  ├─ VendorName: Raynos
   │  ├─ VendorUrl: https://github.com/Raynos/function-bind
   │  └─ MIT
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (node-modules) should list licenses recursively for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnp) should list licenses 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnp) should list licenses as json 1`] = `
"{"axios@npm:0.24.0":{"value":{"locator":"axios@npm:0.24.0","descriptor":"axios@npm:^0.24.0"},"children":{"url":"https://github.com/axios/axios.git","vendorName":"Matt Zabriskie","vendorUrl":"https://axios-http.com","liscense":"MIT"}},"caseless@npm:0.12.0":{"value":{"locator":"caseless@npm:0.12.0","descriptor":"caseless@npm:^0.12.0"},"children":{"url":"https://github.com/mikeal/caseless","vendorName":"Mikeal Rogers","liscense":"Apache-2.0"}},"has@npm:1.0.3":{"value":{"locator":"has@npm:1.0.3","descriptor":"has@npm:^1.0.3"},"children":{"url":"git://github.com/tarruda/has.git","vendorName":"Thiago de Arruda","vendorUrl":"https://github.com/tarruda/has","liscense":"MIT"}},"is-ci@npm:1.2.1":{"value":{"locator":"is-ci@npm:1.2.1","descriptor":"is-ci@npm:^1.0.0"},"children":{"url":"https://github.com/watson/is-ci.git","vendorName":"Thomas Watson Steen","vendorUrl":"https://github.com/watson/is-ci","liscense":"MIT"}},"is-ci@npm:2.0.0":{"value":{"locator":"is-ci@npm:2.0.0","descriptor":"is-ci@npm:^2.0.0"},"children":{"url":"https://github.com/watson/is-ci.git","vendorName":"Thomas Watson Steen","vendorUrl":"https://github.com/watson/is-ci","liscense":"MIT"}},"is-function@npm:1.0.2":{"value":{"locator":"is-function@npm:1.0.2","descriptor":"is-function@npm:^1.0.2"},"children":{"url":"git://github.com/grncdr/js-is-function.git","vendorName":"Stephen Sugden","vendorUrl":"https://github.com/grncdr/js-is-function","liscense":"MIT"}},"is-promise@npm:3.0.0":{"value":{"locator":"is-promise@npm:3.0.0","descriptor":"is-promise@npm:^3.0.0"},"children":{"url":"https://github.com/then/is-promise.git","vendorName":"ForbesLindesay","liscense":"MIT"}},"is-promise@npm:4.0.0":{"value":{"locator":"is-promise@npm:4.0.0","descriptor":"is-promise@npm:^4.0.0"},"children":{"url":"https://github.com/then/is-promise.git","vendorName":"ForbesLindesay","liscense":"MIT"}},"package1@workspace:packages/package1":{"value":{"locator":"package1@workspace:packages/package1","descriptor":"package1@workspace:packages/package1"},"children":{"liscense":"UNKNOWN"}},"test-package@workspace:.":{"value":{"locator":"test-package@workspace:.","descriptor":"test-package@workspace:."},"children":{"liscense":"UNKNOWN"}}}
"
`;

exports[`licenses list (pnp) should list licenses for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnp) should list licenses recursively 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
   │  ├─ URL: git://github.com/Raynos/function-bind.git
   │  ├─ VendorName: Raynos
   │  ├─ VendorUrl: https://github.com/Raynos/function-bind
   │  └─ MIT
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnp) should list licenses recursively for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnpm) should list licenses 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnpm) should list licenses as json 1`] = `
"{"axios@npm:0.24.0":{"value":{"locator":"axios@npm:0.24.0","descriptor":"axios@npm:^0.24.0"},"children":{"url":"https://github.com/axios/axios.git","vendorName":"Matt Zabriskie","vendorUrl":"https://axios-http.com","liscense":"MIT"}},"caseless@npm:0.12.0":{"value":{"locator":"caseless@npm:0.12.0","descriptor":"caseless@npm:^0.12.0"},"children":{"url":"https://github.com/mikeal/caseless","vendorName":"Mikeal Rogers","liscense":"Apache-2.0"}},"has@npm:1.0.3":{"value":{"locator":"has@npm:1.0.3","descriptor":"has@npm:^1.0.3"},"children":{"url":"git://github.com/tarruda/has.git","vendorName":"Thiago de Arruda","vendorUrl":"https://github.com/tarruda/has","liscense":"MIT"}},"is-ci@npm:1.2.1":{"value":{"locator":"is-ci@npm:1.2.1","descriptor":"is-ci@npm:^1.0.0"},"children":{"url":"https://github.com/watson/is-ci.git","vendorName":"Thomas Watson Steen","vendorUrl":"https://github.com/watson/is-ci","liscense":"MIT"}},"is-ci@npm:2.0.0":{"value":{"locator":"is-ci@npm:2.0.0","descriptor":"is-ci@npm:^2.0.0"},"children":{"url":"https://github.com/watson/is-ci.git","vendorName":"Thomas Watson Steen","vendorUrl":"https://github.com/watson/is-ci","liscense":"MIT"}},"is-function@npm:1.0.2":{"value":{"locator":"is-function@npm:1.0.2","descriptor":"is-function@npm:^1.0.2"},"children":{"url":"git://github.com/grncdr/js-is-function.git","vendorName":"Stephen Sugden","vendorUrl":"https://github.com/grncdr/js-is-function","liscense":"MIT"}},"is-promise@npm:3.0.0":{"value":{"locator":"is-promise@npm:3.0.0","descriptor":"is-promise@npm:^3.0.0"},"children":{"url":"https://github.com/then/is-promise.git","vendorName":"ForbesLindesay","liscense":"MIT"}},"is-promise@npm:4.0.0":{"value":{"locator":"is-promise@npm:4.0.0","descriptor":"is-promise@npm:^4.0.0"},"children":{"url":"https://github.com/then/is-promise.git","vendorName":"ForbesLindesay","liscense":"MIT"}},"package1@workspace:packages/package1":{"value":{"locator":"package1@workspace:packages/package1","descriptor":"package1@workspace:packages/package1"},"children":{"liscense":"UNKNOWN"}},"test-package@workspace:.":{"value":{"locator":"test-package@workspace:.","descriptor":"test-package@workspace:."},"children":{"liscense":"UNKNOWN"}}}
"
`;

exports[`licenses list (pnpm) should list licenses for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnpm) should list licenses recursively 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:1.6.0 (via npm:^1.5.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ function-bind@npm:1.1.1 (via npm:^1.1.1)
   │  ├─ URL: git://github.com/Raynos/function-bind.git
   │  ├─ VendorName: Raynos
   │  ├─ VendorUrl: https://github.com/Raynos/function-bind
   │  └─ MIT
   ├─ has@npm:1.0.3 (via npm:^1.0.3)
   │  ├─ URL: git://github.com/tarruda/has.git
   │  ├─ VendorName: Thiago de Arruda
   │  ├─ VendorUrl: https://github.com/tarruda/has
   │  └─ MIT
   ├─ is-ci@npm:1.2.1 (via npm:^1.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-function@npm:1.0.2 (via npm:^1.0.2)
   │  ├─ URL: git://github.com/grncdr/js-is-function.git
   │  ├─ VendorName: Stephen Sugden
   │  ├─ VendorUrl: https://github.com/grncdr/js-is-function
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ is-promise@npm:4.0.0 (via npm:^4.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;

exports[`licenses list (pnpm) should list licenses recursively for production 1`] = `
"└─ licenses
   ├─ axios@npm:0.24.0 (via npm:^0.24.0)
   │  ├─ URL: https://github.com/axios/axios.git
   │  ├─ VendorName: Matt Zabriskie
   │  ├─ VendorUrl: https://axios-http.com
   │  └─ MIT
   ├─ caseless@npm:0.12.0 (via npm:^0.12.0)
   │  ├─ URL: https://github.com/mikeal/caseless
   │  ├─ VendorName: Mikeal Rogers
   │  └─ Apache-2.0
   ├─ ci-info@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/ci-info.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/ci-info
   │  └─ MIT
   ├─ follow-redirects@npm:1.14.8 [39e5c] (via npm:^1.14.4 [39e5c])
   │  ├─ URL: git@github.com:follow-redirects/follow-redirects.git
   │  ├─ VendorName: Ruben Verborgh
   │  ├─ VendorUrl: https://github.com/follow-redirects/follow-redirects
   │  └─ MIT
   ├─ is-ci@npm:2.0.0 (via npm:^2.0.0)
   │  ├─ URL: https://github.com/watson/is-ci.git
   │  ├─ VendorName: Thomas Watson Steen
   │  ├─ VendorUrl: https://github.com/watson/is-ci
   │  └─ MIT
   ├─ is-promise@npm:3.0.0 (via npm:^3.0.0)
   │  ├─ URL: https://github.com/then/is-promise.git
   │  ├─ VendorName: ForbesLindesay
   │  └─ MIT
   ├─ package1@workspace:packages/package1 (via workspace:packages/package1)
   │  └─ UNKNOWN
   └─ test-package@workspace:. (via workspace:.)
      └─ UNKNOWN
"
`;
